--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     "publication_schedule": "quarterly",
     "publication_lag": "",
     "index_url": "",
-    "notes": "I can't find the original source for this. Possible alternative, not behind CAPTCHA: http://www.hscic.gov.uk/article/2021/Website-Search?productid=20032, published monthly with a lag of 3 months",
+    "notes": "I can't find the original source for this. Possible alternative, not behind CAPTCHA: http://www.hscic.gov.uk/article/2021/Website-Search?productid=20032, published monthly with a lag of 3 months. If you want to add list size data for only part of a quarter - which will be the case if the HSCIC file is not for the last month of a quarter - then rename the filename to cover only those months.",
     "requires_captcha": true,
     "tags": ["core_data"],
     "importers": ["import_list_sizes --filename Patient_List_Size.*csv"],
