--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
     "title": "List of dispensing practices, addresses, and GP counts",
     "description": "A Dispensing Practice has the authority to dispense as well as prescribe drugs, on the grounds they are very rural. There are a bit over 1000 in England.",
     "publisher": "NHS Business Services Authority",
-    "publication_schedule": "end of each month",
-    "publication_lag": "1 month",
-    "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/report/viewReportList.do?reportMenuItemId=207",
-    "notes": "I couldn't find the source of the XLS version that was checked into git; a comment in the model suggests it was at https://www.report.ppa.org.uk/, which no longer exists. The one specified here is a CSV source that appears definitive and is more suitable for ingestion, but will need a new importer writing",
+    "publication_schedule": "quarterly",
+    "publication_lag": "",
+    "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/report/viewReportList.do?reportMenuItemId=211",
+    "notes": "",
     "requires_captcha": true,
-    "tags": ["core_data"],
+    "tags": [""],
     "importers": ["import_practice_dispensing_status --filename dispensing_practices.*\\.csv"],
     "depends_on": ["practice_details", "prescribing"]
   },
@@ -17,14 +17,14 @@
     "id": "patient_list_size",
     "title": "Patient list sizes of practice broken down by age decile and gender",
     "description": "",
-    "publisher": "",
+    "publisher": "NHS Business Services Authority",
     "publication_schedule": "quarterly",
     "publication_lag": "",
-    "index_url": "",
-    "notes": "I can't find the original source for this. Possible alternative, not behind CAPTCHA: http://www.hscic.gov.uk/article/2021/Website-Search?productid=20032, published monthly with a lag of 3 months. If you want to add list size data for only part of a quarter - which will be the case if the HSCIC file is not for the last month of a quarter - then rename the filename to cover only those months.",
+    "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/data/showDataSelector.do?reportId=128",
+    "notes": "If you want to add list size data for only part of a quarter - which will be the case if the HSCIC file is not for the last month of a quarter - then rename the filename to cover only those months.",
     "requires_captcha": true,
     "tags": ["core_data"],
-    "importers": ["import_list_sizes --filename Patient_List_Size.*csv"],
+    "importers": ["import_lifst_sizes --filename Patient_List_Size.*csv"],
     "depends_on": ["practice_details", "prescribing", "patient_list_weightings"]
   },
   {
@@ -49,7 +49,7 @@
     "publisher": "NHS Business Services Authority",
     "publication_schedule": "end of each month",
     "publication_lag": "",
-    "notes": "We currently use a version that is correct as of Jan 2016; we should probably be importing this monthly",
+    "notes": "We currently use a version that is correct as of Jan 2016; we should probably be importing this quarterly or so. There are monthly changes but not that many.",
     "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/data/showDataSelector.do?reportId=126",
     "filename_pattern": "bnf_codes.csv",
     "requires_captcha": true,
@@ -63,7 +63,7 @@
     "publisher": "Health & Social Care Information Centre",
     "publication_schedule": "",
     "publication_lag": "",
-    "notes": "I'm not sure of the correct source for this data -- I could only find a PDF",
+    "notes": "Source is data provided privately by HSCIC, extracted from ePACT in April 2016. Not all presentations are included. Their ref NIC-23748-Q0D1L enquiries@hscic.gov.uk",
     "urls": {
       "2013": "http://www.hscic.gov.uk/media/9376/Average-daily-quantity-ADQ-values-2012-13/pdf/adqs_2012_13.pdf"},
     "tags": ["core_data"],
@@ -77,7 +77,7 @@
     "publisher": "NHS England",
     "publication_schedule": "irregular (less than yealy)",
     "publication_lag": "",
-    "notes": "We currently use a version that is correct as of Feb 2013. There is a newer one for April 2015, but it doesn't import correctly with the current importer script",
+    "notes": "We currently use the ONS's version, correct as of Feb 2013. There is a more recent version from PHE of April 2015, but it doesn't import correctly with the current importer script",
     "index_url": "http://www.england.nhs.uk/resources/ccg-maps/",
     "requires_captcha": false,
     "tags": ["core_data"],
@@ -168,7 +168,7 @@
   {
     "id": "practice_details",
     "title": "Addresses and dates for GP Practices",
-    "description": "The definitive source of NHS organisational data",
+    "description": "The definitive source of NHS organisational data: includes practice setting and practice-CCG membership",
     "publisher": "Health & Social Care Information Centre",
     "publication_schedule": "end of each month",
     "publication_lag": "",
