Clarify role of patient_list_sizes

--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,9 @@
     "description": "",
     "publisher": "NHS Business Services Authority",
     "publication_schedule": "quarterly",
-    "publication_lag": "",
+    "publication_lag": "About 50 days",
     "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/data/showDataSelector.do?reportId=128",
-    "notes": "If you want to add list size data for only part of a quarter - which will be the case if the HSCIC file is not for the last month of a quarter - then rename the filename to cover only those months.",
+    "notes": "The data doesn't contain date stamps, so we rely on the correct datestamping of the containing folder to verify the validity of the data. For example, if a CSV is valid for Jan - March 2016, then it should be placed in a folder like `2016_03/Patient_List_Size-whatever.csv`",
     "requires_captcha": true,
     "tags": ["core_data"],
     "importers": ["import_list_sizes --filename Patient_List_Size.*csv"],
