Move bigquery utils to external library

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ python-dateutil
 networkx
 google-api-python-client
 retrying
-git+https://github.com/GoogleCloudPlatform/google-cloud-python#egg=gcloud
+ebmdatalab-python==0.0.3
