--- a/manifest.json
+++ b/manifest.json
@@ -65,7 +65,7 @@
     "publisher": "Health & Social Care Information Centre",
     "publication_schedule": "",
     "publication_lag": "",
-    "notes": "Source is data provided privately by HSCIC, extracted from ePACT in April 2016. Not all presentations are included. Their ref NIC-23748-Q0D1L enquiries@hscic.gov.uk",
+    "notes": "Source is data provided privately by HSCIC, extracted from ePACT in April 2016. Not all presentations are included. Their ref NIC-23748-Q0D1L enquiries@hscic.gov.uk. We should refresh this approx yearly.",
     "urls": {
       "2013": "http://www.hscic.gov.uk/media/9376/Average-daily-quantity-ADQ-values-2012-13/pdf/adqs_2012_13.pdf"},
     "tags": ["core_data"],
