Use NHS Digital source for patient list size
Should be deployed alongside ebmdatalab/openprescribing#378

--- a/manifest.json
+++ b/manifest.json
@@ -19,13 +19,13 @@
     "description": "",
     "publisher": "NHS Business Services Authority",
     "publication_schedule": "quarterly",
-    "publication_lag": "About 50 days",
+    "publication_lag": "2 to 3 weeks",
     "index_url": "https://apps.nhsbsa.nhs.uk/infosystems/data/showDataSelector.do?reportId=128",
-    "notes": "The data doesn't contain date stamps, so we rely on the correct datestamping of the containing folder to verify the validity of the data. For example, if a CSV is valid for Jan - March 2016, then it should be placed in a folder like `2016_03/Patient_List_Size-whatever.csv`",
-    "requires_captcha": true,
+    "notes": "The data doesn't contain date stamps, so we rely on the correct datestamping of the containing folder to verify the validity of the data. For example, if a CSV is valid for Jan - March 2016, then it should be placed in a folder like `2016_03/patient_list_size_new.csv`",
+    "fetcher": "hscic_list_sizes.py",
     "tags": ["core_data"],
     "always_import": true,
-    "importers": ["import_list_sizes --filename Patient_List_Size.*csv"],
+    "importers": ["import_list_sizes --filename patient_list_size_new.csv"],
     "after_import": [],
     "depends_on": ["practice_details", "prescribing", "patient_list_weightings"]
   },
